--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   year={2024},
   publisher={Nature Publishing Group UK London},
   abbr={Nature Materials},
-  abs={Confining materials to two-dimensional forms changes the behaviour of the electrons and enables the creation of new devices. However, most materials are challenging to produce as uniform, thin crystals. Here we present a synthesis approach where thin crystals are grown in a nanoscale mould defined by atomically flat van der Waals (vdW) materials. By heating and compressing bismuth in a vdW mould made of hexagonal boron nitride, we grow ultraflat bismuth crystals less than 10 nm thick. Due to quantum confinement, the bismuth bulk states are gapped, isolating intrinsic Rashba surface states for transport studies. The vdW-moulded bismuth shows exceptional electronic transport, enabling the observation of Shubnikov–de Haas quantum oscillations originating from the (111) surface state Landau levels. By measuring the gate-dependent magnetoresistance, we observe multi-carrier quantum oscillations and Landau level splitting, with features originating from both the top and bottom surfaces. Our vdW mould growth technique establishes a platform for electronic studies and control of bismuth’s Rashba surface states and topological boundary modes1,2,3. Beyond bismuth, the vdW-moulding approach provides a low-cost way to synthesize ultrathin crystals and directly integrate them into a vdW heterostructure.},
+  abstract={Confining materials to two-dimensional forms changes the behaviour of the electrons and enables the creation of new devices. However, most materials are challenging to produce as uniform, thin crystals. Here we present a synthesis approach where thin crystals are grown in a nanoscale mould defined by atomically flat van der Waals (vdW) materials. By heating and compressing bismuth in a vdW mould made of hexagonal boron nitride, we grow ultraflat bismuth crystals less than 10 nm thick. Due to quantum confinement, the bismuth bulk states are gapped, isolating intrinsic Rashba surface states for transport studies. The vdW-moulded bismuth shows exceptional electronic transport, enabling the observation of Shubnikov–de Haas quantum oscillations originating from the (111) surface state Landau levels. By measuring the gate-dependent magnetoresistance, we observe multi-carrier quantum oscillations and Landau level splitting, with features originating from both the top and bottom surfaces. Our vdW mould growth technique establishes a platform for electronic studies and control of bismuth’s Rashba surface states and topological boundary modes1,2,3. Beyond bismuth, the vdW-moulding approach provides a low-cost way to synthesize ultrathin crystals and directly integrate them into a vdW heterostructure.},
   html={https://www.nature.com/articles/s41563-024-01894-0}
 }
 
@@ -25,7 +25,7 @@
   year={2024},
   publisher={Nature Publishing Group UK London},
   abbr={Nature Comms},
-  abs={The fine-tuning of topologically protected states in quantum materials holds great promise for novel electronic devices. However, there are limited methods that allow for the controlled and efficient modulation of the crystal lattice while simultaneously monitoring the changes in the electronic structure within a single sample. Here, we apply significant and controllable strain to high-quality HfTe5 samples and perform electrical transport measurements to reveal the topological phase transition from a weak topological insulator phase to a strong topological insulator phase. After applying high strain to HfTe5 and converting it into a strong topological insulator, we found that the resistivity of the sample increased by 190,500% and that the electronic transport was dominated by the topological surface states at cryogenic temperatures. Our results demonstrate the suitability of HfTe5 as a material for engineering topological properties, with the potential to generalize this approach to study topological phase transitions in van der Waals materials and heterostructures.},
+  abstract={The fine-tuning of topologically protected states in quantum materials holds great promise for novel electronic devices. However, there are limited methods that allow for the controlled and efficient modulation of the crystal lattice while simultaneously monitoring the changes in the electronic structure within a single sample. Here, we apply significant and controllable strain to high-quality HfTe5 samples and perform electrical transport measurements to reveal the topological phase transition from a weak topological insulator phase to a strong topological insulator phase. After applying high strain to HfTe5 and converting it into a strong topological insulator, we found that the resistivity of the sample increased by 190,500% and that the electronic transport was dominated by the topological surface states at cryogenic temperatures. Our results demonstrate the suitability of HfTe5 as a material for engineering topological properties, with the potential to generalize this approach to study topological phase transitions in van der Waals materials and heterostructures.},
   html={https://www.nature.com/articles/s41467-023-44547-7}
 }
 
@@ -37,7 +37,7 @@
   year={2024},
   publisher={Wiley Online Library},
   abbr={Adv. Materials},
-  abs={Thermochromism, the change in color of a material with temperature, is the fundamental basis of optical thermometry. A longstanding challenge in realizing sensitive optical thermometers for widespread use is identifying materials with pronounced thermometric optical performance in the visible range. Herein, it is demonstrated that single crystals of indium selenium iodide (InSeI), a 1D van der Waals (vdW) solid consisting of weakly bound helical chains, exhibit considerable visible range thermochromism. A strong temperature-dependent optical band edge absorption shift ranging from 450 to 530 nm (2.8 to 2.3 eV) over a 380 K temperature range with an experimental (dEg/dT)max value extracted to be 1.26 × 10−3 eV K−1 is shown. This value lies appreciably above most dense conventional semiconductors in the visible range and is comparable to soft lattice solids. The authors further seek to understand the origin of this unusually sensitive thermochromic behavior and find that it arises from strong electron–phonon interactions and anharmonic phonons that significantly broaden band edges and lower the Eg with increasing temperature. The identification of structural signatures resulting in sensitive thermochromism in 1D vdW crystals opens avenues in discovering low-dimensional solids with strong temperature-dependent optical responses across broad spectral windows, dimensionalities, and size regimes.},
+  abstract={Thermochromism, the change in color of a material with temperature, is the fundamental basis of optical thermometry. A longstanding challenge in realizing sensitive optical thermometers for widespread use is identifying materials with pronounced thermometric optical performance in the visible range. Herein, it is demonstrated that single crystals of indium selenium iodide (InSeI), a 1D van der Waals (vdW) solid consisting of weakly bound helical chains, exhibit considerable visible range thermochromism. A strong temperature-dependent optical band edge absorption shift ranging from 450 to 530 nm (2.8 to 2.3 eV) over a 380 K temperature range with an experimental (dEg/dT)max value extracted to be 1.26 × 10−3 eV K−1 is shown. This value lies appreciably above most dense conventional semiconductors in the visible range and is comparable to soft lattice solids. The authors further seek to understand the origin of this unusually sensitive thermochromic behavior and find that it arises from strong electron–phonon interactions and anharmonic phonons that significantly broaden band edges and lower the Eg with increasing temperature. The identification of structural signatures resulting in sensitive thermochromism in 1D vdW crystals opens avenues in discovering low-dimensional solids with strong temperature-dependent optical responses across broad spectral windows, dimensionalities, and size regimes.},
   html={https://onlinelibrary.wiley.com/doi/10.1002/adma.202312597}
 }
 
@@ -50,7 +50,7 @@
   year={2024},
   publisher={Elsevier},
   abbr={Results Phys.},
-  abs={The mechanical properties, electronic structure, electric transport and optoelectronic properties of a recently predicted wide bandgap semiconductor β-HfNCl monolayer are systematically studied by means of first-principles calculations. β-HfNCl monolayer is isotropic in mechanical properties, whose calculated Young’s modulus, shear modulus, and layer modulus of β-HfNCl monolayer are 128.9–129.2, 44.28, and 119.46 N m−1, respectively. An appropriate tensile strain (i.e., beyond 3 %) can induce a transition from indirect bandgap to direct bandgap. In addition, we construct several conceptual nanodevice structures based on β-HfNCl monolayer, such as pn-junction diodes, pin-junction field-effect transistors (FETs) and phototransistors. The electronic transport results reveal that the pn-junction diodes have obvious rectification effect and strong electric anisotropy. Their rectification ratios and electric anisotropy ratio (η) can reach up to 106 and 3.69, respectively. The FETs have an obvious field-effect behavior with a slightly lower rectification ratio (1 0 5). Moreover, we investigate the photoelectric response of the phototransistors of β-HfNCl monolayer under the illumination of light. They have a strong response to the light whose energy is larger than the violet light, indicating that the β-HfNCl monolayer can be a platform to detect the ultraviolet light. These findings provide crucial insights into the potential applications of β-HfNCl monolayer in electronic and optoelectronic devices.},
+  abstract={The mechanical properties, electronic structure, electric transport and optoelectronic properties of a recently predicted wide bandgap semiconductor β-HfNCl monolayer are systematically studied by means of first-principles calculations. β-HfNCl monolayer is isotropic in mechanical properties, whose calculated Young’s modulus, shear modulus, and layer modulus of β-HfNCl monolayer are 128.9–129.2, 44.28, and 119.46 N m−1, respectively. An appropriate tensile strain (i.e., beyond 3 %) can induce a transition from indirect bandgap to direct bandgap. In addition, we construct several conceptual nanodevice structures based on β-HfNCl monolayer, such as pn-junction diodes, pin-junction field-effect transistors (FETs) and phototransistors. The electronic transport results reveal that the pn-junction diodes have obvious rectification effect and strong electric anisotropy. Their rectification ratios and electric anisotropy ratio (η) can reach up to 106 and 3.69, respectively. The FETs have an obvious field-effect behavior with a slightly lower rectification ratio (1 0 5). Moreover, we investigate the photoelectric response of the phototransistors of β-HfNCl monolayer under the illumination of light. They have a strong response to the light whose energy is larger than the violet light, indicating that the β-HfNCl monolayer can be a platform to detect the ultraviolet light. These findings provide crucial insights into the potential applications of β-HfNCl monolayer in electronic and optoelectronic devices.},
   html={https://www.sciencedirect.com/science/article/pii/S2211379724000421}
 }
 
@@ -59,7 +59,7 @@
   author={Lopez, Diana and Zhou, Yinong and Cordova, Dmitri and Milligan, Griffin and Ogura, Kaleolani and Wu, Ruqian and Arguilla, Maxx},
   year={2024},
   abbr={ChemRxiv},
-  abs={The rediscovery of one-dimensional (1D) and quasi-1D (q-1D) van der Waals (vdW) crystals ushered the realization of nascent physical properties in 1D that are suitable for applications including photonics, electronics, and sensing. However, despite renewed interest in the creation and understanding of the physical properties of 1D and q-1D vdW crystals, the lack of accessible synthetic pathways for growing well-defined nanostructures that extend across several length scales remains. Using the highly anisotropic 1D vdW NbS3-I crystal as a model phase, we present a catalyst-free and bottom-up synthetic approach to access ultra-long nanowires, with lengths reaching up to 7.9 mm and with uniform thicknesses ranging from 13 to 190 nm between individual nanowires. Control over the synthetic parameters enabled the modulation of intra- and inter-chain growth modalities to selectively yield 1D nanowires or quasi-2D nanoribbons. Comparative synthetic and density functional theory (DFT) studies with a closely related non-dimerized phase, ZrS3, show that the unusual preferential growth along 1D can be correlated to the strongly anisotropic bonding and dimeric nature of NbS3 Type-I. These results, owing to the ubiquity of dimerization in Peierls-distorted 1D crystals, will open opportunities to grow ultra-long nanowires for high-fidelity optical and electronic devices approaching the sub-nanoscale regime.},
+  abstract={The rediscovery of one-dimensional (1D) and quasi-1D (q-1D) van der Waals (vdW) crystals ushered the realization of nascent physical properties in 1D that are suitable for applications including photonics, electronics, and sensing. However, despite renewed interest in the creation and understanding of the physical properties of 1D and q-1D vdW crystals, the lack of accessible synthetic pathways for growing well-defined nanostructures that extend across several length scales remains. Using the highly anisotropic 1D vdW NbS3-I crystal as a model phase, we present a catalyst-free and bottom-up synthetic approach to access ultra-long nanowires, with lengths reaching up to 7.9 mm and with uniform thicknesses ranging from 13 to 190 nm between individual nanowires. Control over the synthetic parameters enabled the modulation of intra- and inter-chain growth modalities to selectively yield 1D nanowires or quasi-2D nanoribbons. Comparative synthetic and density functional theory (DFT) studies with a closely related non-dimerized phase, ZrS3, show that the unusual preferential growth along 1D can be correlated to the strongly anisotropic bonding and dimeric nature of NbS3 Type-I. These results, owing to the ubiquity of dimerization in Peierls-distorted 1D crystals, will open opportunities to grow ultra-long nanowires for high-fidelity optical and electronic devices approaching the sub-nanoscale regime.},
   chemrxiv={https://chemrxiv.org/engage/chemrxiv/article-details/661dc770418a5379b0eda2f9}
 }
 
@@ -69,7 +69,7 @@
   journal={arXiv preprint arXiv:2305.18637},
   year={2023},
   abbr={arXiv},
-  abs={This study aims to investigate the interplay between chiral-induced spin-orbit coupling along the screw axis and antisymmetric spin-orbit coupling (ASOC) in the normal plane within a chiral crystal, using both general model analysis and first-principles simulations of InSeI, a chiral van der Waals crystal. While chiral molecules of light atoms typically exhibit spin selectivity only along the screw axis, chiral crystals with heavier atoms can have strong ASOC effects that influence spin-momentum locking in all directions. The resulting phase diagram of spin texture shows the potential for controlling phase transition and flipping spin by reducing symmetry through surface cleavage, thickness reduction or strain. We also experimentally synthesized high-quality InSeI crystals of the thermodynamically stable achiral analogue which showed exposed (110) facets corresponding to single-handed helices to demonstrate the potential of material realization for higher-dimensional spin selectivity in the development of spintronic devices.},
+  abstract={This study aims to investigate the interplay between chiral-induced spin-orbit coupling along the screw axis and antisymmetric spin-orbit coupling (ASOC) in the normal plane within a chiral crystal, using both general model analysis and first-principles simulations of InSeI, a chiral van der Waals crystal. While chiral molecules of light atoms typically exhibit spin selectivity only along the screw axis, chiral crystals with heavier atoms can have strong ASOC effects that influence spin-momentum locking in all directions. The resulting phase diagram of spin texture shows the potential for controlling phase transition and flipping spin by reducing symmetry through surface cleavage, thickness reduction or strain. We also experimentally synthesized high-quality InSeI crystals of the thermodynamically stable achiral analogue which showed exposed (110) facets corresponding to single-handed helices to demonstrate the potential of material realization for higher-dimensional spin selectivity in the development of spintronic devices.},
   arxiv={2305.18637}
 }
 
@@ -83,7 +83,7 @@
   year={2023},
   publisher={APS},
   abbr={PRL},
-  abs={Flat bands (FBs), presenting a strongly interacting quantum system, have drawn increasing interest recently. However, experimental growth and synthesis of FB materials have been challenging and have remained elusive for the ideal form of monolayer materials where the FB arises from destructive quantum interference as predicted in 2D lattice models. Here, we report surface growth of a self-assembled monolayer of 2D hydrogen-bond (H-bond) organic frameworks (HOFs) of 1,3,5-tris(4-hydroxyphenyl)benzene (THPB) on Au(111) substrate and the observation of FB. High-resolution scanning tunneling microscopy or spectroscopy shows mesoscale, highly ordered, and uniform THPB HOF domains, while angle-resolved photoemission spectroscopy highlights a FB over the whole Brillouin zone. Density-functional-theory calculations and analyses reveal that the observed topological FB arises from a hidden electronic breathing-kagome lattice without atomically breathing bonds. Our findings demonstrate that self-assembly of HOFs provides a viable approach for synthesis of 2D organic topological materials, paving the way to explore many-body quantum states of topological FBs.},
+  abstract={Flat bands (FBs), presenting a strongly interacting quantum system, have drawn increasing interest recently. However, experimental growth and synthesis of FB materials have been challenging and have remained elusive for the ideal form of monolayer materials where the FB arises from destructive quantum interference as predicted in 2D lattice models. Here, we report surface growth of a self-assembled monolayer of 2D hydrogen-bond (H-bond) organic frameworks (HOFs) of 1,3,5-tris(4-hydroxyphenyl)benzene (THPB) on Au(111) substrate and the observation of FB. High-resolution scanning tunneling microscopy or spectroscopy shows mesoscale, highly ordered, and uniform THPB HOF domains, while angle-resolved photoemission spectroscopy highlights a FB over the whole Brillouin zone. Density-functional-theory calculations and analyses reveal that the observed topological FB arises from a hidden electronic breathing-kagome lattice without atomically breathing bonds. Our findings demonstrate that self-assembly of HOFs provides a viable approach for synthesis of 2D organic topological materials, paving the way to explore many-body quantum states of topological FBs.},
   html={https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.130.036203}
 }
 
@@ -97,7 +97,7 @@
   year={2023},
   publisher={APS},
   abbr={PRB},
-  abs={In two-dimensional higher-order topological insulators, the corner states are separated by a non-negligible distance. The crystalline symmetries protect the robustness of their corner states with long-range entanglement, which are robust against time-reversal-breaking perturbations. Here, we demonstrate the possibility of direct control of the topological corner states by introducing the spin degree of freedom in a rhombus-shaped Kekulé nanostructure with local magnetization and local electric potential. By applying a local magnetization on one corner, the other corner can also be strongly spin polarized. By further applying a local electric potential at the same corner, the sign of the spin polarization can be reversed at both corners. We also prove the robustness of the control of the spin polarization under the disorder. Moreover, we demonstrate the material realization in a 𝛾-graphyne nanostructure with Mn adsorption and Si replacement at one corner by using first-principles calculations. Other higher-order lattices and the shape of the nanostructure are also discussed. Our studies give a showcase of the remote correlation of quantum states in higher-order topological materials for spintronic and quantum applications.},
+  abstract={In two-dimensional higher-order topological insulators, the corner states are separated by a non-negligible distance. The crystalline symmetries protect the robustness of their corner states with long-range entanglement, which are robust against time-reversal-breaking perturbations. Here, we demonstrate the possibility of direct control of the topological corner states by introducing the spin degree of freedom in a rhombus-shaped Kekulé nanostructure with local magnetization and local electric potential. By applying a local magnetization on one corner, the other corner can also be strongly spin polarized. By further applying a local electric potential at the same corner, the sign of the spin polarization can be reversed at both corners. We also prove the robustness of the control of the spin polarization under the disorder. Moreover, we demonstrate the material realization in a 𝛾-graphyne nanostructure with Mn adsorption and Si replacement at one corner by using first-principles calculations. Other higher-order lattices and the shape of the nanostructure are also discussed. Our studies give a showcase of the remote correlation of quantum states in higher-order topological materials for spintronic and quantum applications.},
   html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.035412}
 }
 
@@ -111,7 +111,7 @@
   year={2023},
   publisher={APS},
   abbr={PRB},
-  abs={Intrinsic topological superconducting materials are exotic and vital to develop the next-generation topological superconducting devices, topological quantum calculations, and quantum information technologies. Here, we predict the topological and nodal superconductivity of NiAs-type 𝑀⁢S (𝑀=NbandTa) transition-metal sulfides. We reveal their higher-order topology nature with an index of 𝑍4=2. These materials have a higher 𝑇c than the Nb or Ta metal superconductors due to their flat band and strong electron-phonon coupling nature. Electron doping and lighter isotopes can effectively enhance the 𝑇c. Our findings show that the 𝑀⁢S (𝑀=NbandTa) systems can be platforms to study exotic physics in the higher-order topological superconductors, and provide a theoretical support to utilize them as the topological superconducting devices in the field of advanced topological quantum calculations and information technologies.},
+  abstract={Intrinsic topological superconducting materials are exotic and vital to develop the next-generation topological superconducting devices, topological quantum calculations, and quantum information technologies. Here, we predict the topological and nodal superconductivity of NiAs-type 𝑀⁢S (𝑀=NbandTa) transition-metal sulfides. We reveal their higher-order topology nature with an index of 𝑍4=2. These materials have a higher 𝑇c than the Nb or Ta metal superconductors due to their flat band and strong electron-phonon coupling nature. Electron doping and lighter isotopes can effectively enhance the 𝑇c. Our findings show that the 𝑀⁢S (𝑀=NbandTa) systems can be platforms to study exotic physics in the higher-order topological superconductors, and provide a theoretical support to utilize them as the topological superconducting devices in the field of advanced topological quantum calculations and information technologies.},
   html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.054519}
 }
 
@@ -125,7 +125,7 @@
   year={2023},
   publisher={Wiley Online Library},
   abbr={Adv. Materials},
-  abs={Quantum anomalous Hall phases arising from the inverted band topology in magnetically doped topological insulators have emerged as an important subject of research for quantization at zero magnetic fields. Though necessary for practical implementation, sophisticated electrical control of molecular beam epitaxy (MBE)-grown quantum anomalous Hall matter have been stymied by growth and fabrication challenges. Here, a novel procedure is demonstrated, employing a combination of thin-film deposition and 2D material stacking techniques, to create dual-gated devices of the MBE-grown quantum anomalous Hall insulator, Cr-doped (Bi,Sb)2Te3. In these devices, orthogonal control over the field-induced charge density and the electric displacement field is demonstrated. A thorough examination of material responses to tuning along each control axis is presented, realizing magnetic property control along the former and a novel capability to manipulate the surface exchange gap along the latter. Through electrically addressing the exchange gap, the capabilities to either strengthen the quantum anomalous Hall state or suppress it entirely and drive a topological phase transition to a trivial state are demonstrated. The experimental result is explained using first principle theoretical calculations, and establishes a practical route for in situ control of quantum anomalous Hall states and topology.},
+  abstract={Quantum anomalous Hall phases arising from the inverted band topology in magnetically doped topological insulators have emerged as an important subject of research for quantization at zero magnetic fields. Though necessary for practical implementation, sophisticated electrical control of molecular beam epitaxy (MBE)-grown quantum anomalous Hall matter have been stymied by growth and fabrication challenges. Here, a novel procedure is demonstrated, employing a combination of thin-film deposition and 2D material stacking techniques, to create dual-gated devices of the MBE-grown quantum anomalous Hall insulator, Cr-doped (Bi,Sb)2Te3. In these devices, orthogonal control over the field-induced charge density and the electric displacement field is demonstrated. A thorough examination of material responses to tuning along each control axis is presented, realizing magnetic property control along the former and a novel capability to manipulate the surface exchange gap along the latter. Through electrically addressing the exchange gap, the capabilities to either strengthen the quantum anomalous Hall state or suppress it entirely and drive a topological phase transition to a trivial state are demonstrated. The experimental result is explained using first principle theoretical calculations, and establishes a practical route for in situ control of quantum anomalous Hall states and topology.},
   html={https://onlinelibrary.wiley.com/doi/full/10.1002/adma.202207622}
 }
 
@@ -149,7 +149,7 @@
   number={arXiv: 1908.03689},
   year={2022},
   abbr={Nanotechnology},
-  abs={Quantum anomalous Hall effect (QAHE) and quantum spin Hall effect (QSHE) are two interesting physical manifestations of 2D materials that have an intrinsic nontrivial band topology. In principle, they are ground-state equilibrium properties characterized by Fermi level lying in a topological gap, below which all the occupied bands are summed to a non-zero topological invariant. Here, we propose theoretical concepts and models of 'excited' QAHE (EQAHE) and EQSHE generated by dissociation of an excitonic insulator (EI) state with complete population inversion (CPI), a unique many-body ground state enabled by two yin-yang flat bands (FBs) of opposite chirality hosted in a diatomic Kagome lattice. The two FBs have a trivial gap in between, i.e. the system is a trivial insulator in the single-particle ground-state, but nontrivial gaps above and below, so that upon photoexcitation the quasi-Fermi levels of both electrons and holes will lie in a nontrivial gap achieved by the CPI-EI state, as demonstrated by exact diagonalization calculations. Then dissociation of singlet and triplet EI state will lead to EQAHE and EQSHE, respectively. Realizations of yin-yang FBs in real materials are also discussed.},
+  abstract={Quantum anomalous Hall effect (QAHE) and quantum spin Hall effect (QSHE) are two interesting physical manifestations of 2D materials that have an intrinsic nontrivial band topology. In principle, they are ground-state equilibrium properties characterized by Fermi level lying in a topological gap, below which all the occupied bands are summed to a non-zero topological invariant. Here, we propose theoretical concepts and models of 'excited' QAHE (EQAHE) and EQSHE generated by dissociation of an excitonic insulator (EI) state with complete population inversion (CPI), a unique many-body ground state enabled by two yin-yang flat bands (FBs) of opposite chirality hosted in a diatomic Kagome lattice. The two FBs have a trivial gap in between, i.e. the system is a trivial insulator in the single-particle ground-state, but nontrivial gaps above and below, so that upon photoexcitation the quasi-Fermi levels of both electrons and holes will lie in a nontrivial gap achieved by the CPI-EI state, as demonstrated by exact diagonalization calculations. Then dissociation of singlet and triplet EI state will lead to EQAHE and EQSHE, respectively. Realizations of yin-yang FBs in real materials are also discussed.},
   html={https://iopscience.iop.org/article/10.1088/1361-6528/ac7a4b}
 }
 
